tests/machine/x/hs/list_nested_assign.hs
-- Code generated by Mochi compiler; DO NOT EDIT.
{-# LANGUAGE DeriveGeneric #-}

module Main where

import Data.List (intercalate, isInfixOf, isPrefixOf)
import qualified Data.List as List
import qualified Data.Map as Map
import Data.Maybe (fromMaybe)
import Data.Time.Clock.POSIX (getPOSIXTime)

matrix = [[1, 2], [3, 4]]

main :: IO ()
main = do
  let matrix = 5
  print (((matrix !! 1) !! 0))
